# deephaven-mcp

./: .gitignore  .markdownlint-cli2.jsonc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTES.md  README.md  REFACTORING_PLAN.md  pyproject.toml  pytest.ini  run_terraform.sh
.github/: copilot-instructions.md
.github/workflows/: black.yml  build-wheels.yml  cla.yml  coverage.yml  docker-mcp-docs.yml  integration-tests.yml  isort.yml  markdownlint.yml  mypy.yml  publish-wheels.yml  pydocstyle.yml  reusable-build-wheel.yml  ruff.yml  unit-tests.yml  venv-install-tests.yml
.windsurf/: rules.yaml
.windsurf/rules/: documentation-standards.md  mcp-tools-organization.md  programming-practices.md  pytest.md
.windsurf/workflows/: check-mocks.md  docs-accuracy.md  docs-improve.md  mcp-stress-test-dev.md  mcp-stress-test-prod.md  pydocs-accuracy.md  pydocs-improve.md  review-basic.md  run-precommit.md  run-tests.md  tests-coverage-cleanup.md
admin/: README.md  run_terraform.sh
admin/terraform/: workspace-dev.tfvars  workspace-prod.tfvars
admin/terraform/backend-bucket/: main.tf  (+3 more)
docker/: README.md
docker/mcp-docs/: Dockerfile  README.md  docker-compose.yml
docs/: DEVELOPER_GUIDE.md  ENV.md  UV.md
mcp-community/: NOTES.md  README-community.md  README-docs.md  README.md  pyproject.toml  requirements.txt
mcp-community/scripts/: mcp_community_test_client.py  mcp_docs_test_client.py  mcp_test_client.py  run_deephaven_test_server.py
mcp-community/src/deephaven/mcp/: config.py
mcp-community/src/deephaven/mcp/community/: __init__.py  _sessions.py
mcp-community/src/deephaven_mcp/: __init__.py  _version.py  config.py
mcp-community/src/deephaven_mcp/community/: __init__.py  _config.py  _mcp.py  _sessions.py  test_config.py
mcp-community/tests/: test__init__.py  test__mcp.py  test_config.py  test_sessions.py  test_version.py
mcp-docs/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-docs/scripts/: mcp_docs_stress_sse.py  mcp_docs_test_client.py
mcp-docs/src/deephaven_mcp/: __init__.py  _version.py  openai.py
mcp-docs/src/deephaven_mcp/docs/: __init__.py  _mcp.py
mcp-docs/tests/: test_docs_init.py  test_docs_mcp.py  test_init.py  test_openai.py  test_version.py
ops/: README.md
ops/artifacts/: deephaven_coreplus_client-1.20240517.250506093038+c2cba50b47-py3-none-any.whl
ops/docker/: README.md
ops/terraform/: workspace-dev.tfvars
scripts/: add_module_pydocs.py  analyze_test_structure.py  finalize_test_refactoring.py  fix_mcp_mod_imports.py  fix_private_helper_calls.py  fix_refactoring.py  mcp_community_test_client.py  mcp_docs_stress_http.py  mcp_docs_stress_sse_cancel_queries.py  mcp_docs_stress_sse_user_queries.py  mcp_docs_stress_test.py  mcp_docs_test_client.py  refactor_split_mcp.py  refactor_split_mcp_v2.py  refactor_split_mcp_v3.py  refactor_split_mcp_v4.py  refactor_split_mcp_v5.py  refactor_tests.py  refactor_tests_v2.py  run_deephaven_test_server.py  test_server_resilience.py  validate_refactoring.py  venv_install_test.sh
src/deephaven_mcp/: __init__.py  _exceptions.py  _logging.py  _monkeypatch.py  config.py  io.py  openai.py  queries.py
terraform/backend-bucket/: .terraform.lock.hcl  README.md
terraform/docker-repo/: README.md  main.tf  providers.tf
terraform/mcp-docs/: .terraform.lock.hcl  README.md  dns.tf
test_queries/: README.md  mcp_tool_tests.md
tests/: conftest.py  test__exceptions.py  test__logging.py  test__logging_integration.py  test__monkeypatch.py  test__version.py  test_community__mcp.py  test_community__sessions.py  test_community_sessions.py  test_config.py  test_config__community_session.py  test_config_community_session.py  test_config_enterprise_session.py  test_config_enterprise_system.py  test_config_errors.py  test_docs_init.py  test_docs_mcp.py  test_enterprise_init.py  test_exceptions.py  test_init.py  test_io.py  test_lifecycle__community.py  test_lifecycle__shared.py  test_mcp_docs_server_init.py  test_mcp_systems_server__mcp.py  test_mcp_systems_server_init.py  test_mcp_systems_server_sessions.py  test_openai.py  test_queries.py  test_sessions.py  test_sessions__lifecycle.py  test_sessions__lifecycle_community.py  test_system__mcp.py  test_system_init.py  test_system_sessions.py
tests/client/: test__constants.py  test__controller_client.py  test__protobuf.py  test__session.py  test__session_factory.py  test_auth_client.py  test_base.py  test_controller_client.py  test_init.py  test_protobuf.py  test_session.py  test_session_factory.py  test_session_manager.py
tests/config/: test__base.py  test__community.py  test__community_session.py  test__enterprise.py  test__validators.py  test_community.py  test_config.py  test_config__community_session.py  test_config__enterprise_system.py  test_config__errors.py  test_enterprise.py  test_init.py
tests/formatters/: __init__.py  test__csv.py  test__json.py  test__markdown.py  test__xml.py  test__yaml.py  test_init.py
tests/lifecycle/: test_lifecycle__community.py  test_lifecycle__shared.py
tests/mcp_docs_server/: test__mcp.py  test_main.py  test_mcp_docs_server_init.py  test_mcp_docs_server_main.py  test_mcp_docs_server_mcp.py
tests/mcp_systems_server/: test__lifespan.py  test__mcp.py  test__session_registry_manager.py  test_init.py  test_mcp_systems_server__mcp.py  test_mcp_systems_server__mcp.py.bak  test_mcp_systems_server_main.py  test_server.py
tests/queries/: test_queries.py
tests/resource_manager/: test__instance_tracker.py  test__launcher.py  test__registry.py  test__registry_combined.py  test__registry_community.py  test__registry_enterprise.py  test_init.py  test_instance_tracker.py  test_launcher.py  test_launcher_integration.py  test_manager.py  test_registry.py  test_registry_combined.py  test_utils.py
tests/session_manager/: test_base_registry.py  test_community_session_registry.py  test_core_plus_session_factory_manager.py  test_init.py  test_manager.py  test_registry.py  test_session_manager.py  test_session_registry.py
tests/sessions/: test_init.py  test_session_manager.py  test_sessions.py  test_sessions__errors.py
(+121 files in other folders)
