[project]
name = "deephaven-mcp-community"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for interacting with Deephaven Community Core workers."
readme = "README.md"
requires-python = ">=3.10"
#TODO: clean up dependencies
dependencies = [
    "aiohttp>=3.11.18",
    "autogen-ext[mcp]>=0.5.4",
    "deephaven-server>=0.38.0",
    "mcp[cli]>=1.6.0",
    "pydeephaven>=0.38.0",
]

[project.scripts]
dh-mcp-community = "deephaven.mcp.community:run_server"
