[project]
name = "deephaven-mcp-community"
dynamic = ["version"]
description = "A Model Context Protocol (MCP) server for interacting with Deephaven Community Core workers."
readme = "README.md"
requires-python = ">=3.10"
#TODO: clean up dependencies
dependencies = [
    "aiohttp>=3.11.18",
    "autogen-ext[mcp]>=0.5.4",
    "deephaven-server>=0.38.0",
    "mcp[cli]>=1.6.0",
    "pydeephaven>=0.38.0",
]

[project.scripts]
dh-mcp-community = "deephaven_mcp.community:run_server"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/deephaven_mcp/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
